fix structure of project

--- a/laba2/bg_process_manager/CMakeLists.txt
+++ b/laba2/bg_process_manager/CMakeLists.txt
@@ -2,7 +2,21 @@ cmake_minimum_required(VERSION 3.29)
 
 project(bg_process_manager C)
 
-add_library(run_bg run_bg.c)
+if(WIN32)
+    set(PLATFORM_SRC src/platform/windows/run_bg_windows.c)
+elseif(UNIX)
+    set(PLATFORM_SRC src/platform/posix/run_bg_posix.c)
+else()
+    message(FATAL_ERROR "Unsupported platform")
+endif()
 
-add_executable(test_runner test_runner.c)
+set(COMMON_SRC
+    src/common/run_bg.c
+)
+
+add_library(run_bg ${COMMON_SRC} ${PLATFORM_SRC})
+
+add_executable(test_runner tests/test_runner.c)
+
 target_link_libraries(test_runner run_bg)
+
