fix laba5 for windows

--- a/laba5/CMakeLists.txt
+++ b/laba5/CMakeLists.txt
@@ -42,3 +42,6 @@ endif()
 
 add_executable(temperature_logger ${TEMP_LOGGER_SOURCES})
 target_link_libraries(temperature_logger database server sqlite3 cJSON)
+if(WIN32)
+    target_link_libraries(temperature_logger ws2_32)
+endif ()
